--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -249,7 +249,28 @@ a.button:hover {
   float: right;
   background: #a795ef;
   color: white;
+  position: relative;
 }
+/* operated here */
+.message.outgoing:after {
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 9px solid transparent;
+	border-left-color: #babb14;
+	border-right: 0;
+	border-bottom: 0;
+	margin-top: -4.5px;
+	margin-right: -9px;
+}
+
+
+
+/* operation ends */
+
 #message_window #message_replies {
   text-align: center;
   overflow-x: auto;
