--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -260,7 +260,7 @@ a.button:hover {
 	width: 0;
 	height: 0;
 	border: 9px solid transparent;
-	border-left-color: #babb14;
+	border-left-color: #a795ef;
 	border-right: 0;
 	border-bottom: 0;
 	margin-top: -4.5px;
