--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -252,6 +252,25 @@ a.button:hover {
   position: relative;
 }
 /* operated here */
+
+          /* the other one? */
+/* .message {
+  position: relative;
+}
+.message .message:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 20px solid transparent;
+	border-right-color: #f0f0f0;
+	border-left: 0;
+	border-top: 0;
+	margin-top: -10px;
+	margin-left: -20px;
+} */
 .message.outgoing:after {
 	content: '';
 	position: absolute;
@@ -266,6 +285,7 @@ a.button:hover {
 	margin-top: -4.5px;
 	margin-right: -9px;
 }
+
 
 
 
@@ -364,3 +384,14 @@ a.button:hover {
 }
 
 /*# sourceMappingURL=styles.css.map */
+
+/* completely new stuff */
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+}
+.portfolio {
+  display: flex;
+  
+}
