--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@ html {
   padding: 0;
   font-size: 18px;
   background-color: #FFF;
-  font-family: "helvetica", sans-serif;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .wrapper {
@@ -120,6 +120,8 @@ a.button:hover {
 }
 
 /* chat client */
+
+
 #message_window {
   background: #FFFFFF;
   border-left: 1px solid #CCC;
@@ -131,7 +133,7 @@ a.button:hover {
   /*margin: 2rem auto;*/
   display: flex;
   flex-direction: column;
-  font-family: "helvetica", sans-serif;
+  font-family: 'Press Start 2P', cursive;
 }
 #message_window .disconnected {
   background: #FFFFCC;
