--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -421,13 +421,14 @@ a.button:hover {
   border-bottom: 1px solid black;
 }
 .logoContainer {
-  width: 50%;
+  /* width: 50%; */
 }
 
 .portfolios {
   display: flex;
-  justify-content: flex-end;
-  width: 50%;
+  justify-content: center;
+  align-items: center;
+  /* width: 50%; */
 }
 .portfolio {
   margin: 1rem;
@@ -465,3 +466,19 @@ a {
 button {
   font-size: .6rem;
 }
+
+
+/* p{
+  color: Pink; 
+  font-family: "Courier";
+  font-size: 20px;
+  margin: 10px 0 0 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 30em;
+  animation: type 4s steps(60, end); 
+}
+
+@keyframes type{ 
+  from { width: 0; } 
+}  */
