--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -568,7 +568,7 @@ button {
   margin-right: 5px;
   background-color: silver;
   min-height: 14px;
-  min-width: 16px;
+  min-width: 1rem;
 
 
   color: black;
@@ -581,7 +581,7 @@ button {
 
 #readme {
   /* TAG FOR ENABLE */
-  /* display: none; */
+  display: none;
   background-color: white;
   font-family: "Pixelated MS Sans Serif", Arial;
   -webkit-font-smoothing: none;
@@ -618,8 +618,12 @@ button {
   margin: 1rem;
 }
 .signature {
-  margin-left: 12rem;
+  /* margin-left: 12rem; */
   /* margin-top: 12rem; */
+}
+.signOff {
+  margin-left: 12rem;
+  margin-top: 7rem;
 }
 
 /* animation test */
@@ -628,17 +632,22 @@ button {
   /* color: rgb(47, 61, 255);  */
   /* font-family: "Courier"; */
   font-size: .8rem;
-  margin: 10px 0 0 10px;
+  /* margin: 10px 0 0 10px; */
   white-space: nowrap;
   overflow: hidden;
-  width: 76em;
-  /* height: 5rem; */
-  animation: type 4s steps(60, end); 
+  /* overflow-x: hidden; */
+  /* overflow-y: visible; */
+  /* width: 78em; */
+  width: 200rem;
+  height: fit-content;
+  /* height: 100%; */
+  animation: type 1s steps(60, end); 
+  /* display: flex;
+  flex-wrap: wrap; */
 }
-
+.message {}
 @keyframes type{ 
   from { width: 0; }
-  /* to { height: }  */
 } 
   
 
